--- a/package.json
+++ b/package.json
@@ -1,10 +1,19 @@
 {
-  "version": "1.0.0",
-  "name": "react-node-download",
+  "version": "1.0.1",
+  "name": "htmldl",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "type": "module",
+  "exports": {
+    ".": {
+      "import": "./dist/index.esm.js",
+      "require": "./dist/index.js"
+    }
+  },
+  "files": [
+    "dist"
+  ],
   "devDependencies": {
     "@types/bun": "latest",
     "tsup": "^8.3.5"
