--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
   ],
   "devDependencies": {
     "@types/bun": "latest",
-    "tsup": "^8.3.5"
+    "tsup": "^8.3.5",
+    "typescript": "^5.7.2"
   },
   "peerDependencies": {
-    "typescript": "^5.7.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "typescript": "^5.7.2"
   },
   "dependencies": {
     "html-to-image": "^1.11.11"
