--- a/package.json
+++ b/package.json
@@ -1,37 +1,26 @@
 {
-  "version": "1.3.0",
-  "name": "htmldl",
+  "name": "html-to-image-downloader",
+  "version": "1.0.0",
+  "description": "A utility to capture HTML DOM nodes as PNG images and download them.",
   "main": "dist/index.js",
-  "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
-  "type": "module",
-  "exports": {
-    ".": {
-      "import": "./dist/index.esm.js",
-      "require": "./dist/index.js"
-    }
-  },
-  "files": [
-    "dist"
-  ],
-  "devDependencies": {
-    "@types/bun": "latest",
-    "tsup": "^8.3.5",
-    "typescript": "^5.7.2"
-  },
-  "peerDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "typescript": "^5.7.2"
-  },
-  "dependencies": {
-    "html-to-image": "^1.11.11"
-  },
   "scripts": {
-    "build": "tsup src/index.ts --format esm,cjs --dts"
+    "build": "tsc",
+    "prepublishOnly": "npm run build"
   },
-  "author": {
-    "email": "nikzad.alireza79@gmail.com",
-    "name": "Alireza Nikzad"
+  "keywords": [
+    "html-to-image",
+    "download",
+    "png",
+    "dom",
+    "utility"
+  ],
+  "author": "Your Name",
+  "license": "MIT",
+  "dependencies": {
+    "html-to-image": "^1.11.10"
+  },
+  "devDependencies": {
+    "typescript": "^5.0.0"
   }
 }
