--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "moduleDetection": "force",
     "jsx": "react-jsx",
     "allowJs": true,
-    "baseUrl": ".",
+    "outDir": "dist",
 
     // Bundler mode
     "moduleResolution": "bundler",
@@ -20,10 +20,12 @@
     "skipLibCheck": true,
     "noFallthroughCasesInSwitch": true,
     "declaration": true,
+    "esModuleInterop": true,
 
     // Some stricter flags (disabled by default)
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false
-  }
+  },
+  "include": ["src/**/*"]
 }
