--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "html-to-image-downloader",
-  "version": "1.0.0",
+  "name": "htmldl",
+  "version": "2.0.0",
   "description": "A utility to capture HTML DOM nodes as PNG images and download them.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
