--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "htmldl",
-  "version": "2.1.2",
+  "version": "2.1.3",
   "description": "A utility to capture HTML DOM nodes as PNG images and download them.",
   "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "types": "dist/types/index.d.ts",
   "type": "module",
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/index.js",
+    "build": "bun build src/index.ts --outdir dist",
     "test": "bun test"
   },
   "keywords": [
@@ -23,6 +22,9 @@
     "html-to-image": "^1.11.10"
   },
   "devDependencies": {
-    "typescript": "^5.0.0"
+    "@rollup/plugin-typescript": "^12.1.2",
+    "rollup": "^4.28.1",
+    "tslib": "^2.8.1",
+    "typescript": "^5.7.2"
   }
 }
